--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,16 @@
 language: rust
-matrix:
-  include:
-    - rust: stable
-    - rust: beta
-    - rust: nightly
-      env:
-       - FEATURES='nostd'
-os:
-  - linux
-  - osx
-env:
-  - ARCH=x86_64
-  - ARCH=i686
-matrix:
-  allow_failures:
-    - rust: nightly
+rust:
+  - stable
+  - beta
+  - nightly
 script:
   - |
       cargo build --verbose &&
       cargo test --verbose &&
-      ([ -z "$FEATURES" ] || cargo build --verbose --features "$FEATURES") &&
-      ([ -z "$FEATURES" ] || cargo test --verbose --features "$FEATURES")
+      ([ $TRAVIS_RUST_VERSION == "nightly" ] && cargo build --verbose --features nostd) &&
+      ([ $TRAVIS_RUST_VERSION == "nightly" ] && cargo test --verbose --features nostd)
 after_success: |
+  [ $TRAVIS_RUST_VERSION == "stable" ] &&
   [ $TRAVIS_BRANCH = master ] &&
   [ $TRAVIS_PULL_REQUEST = false ] &&
   cargo doc &&
