--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,16 @@ script:
   - |
       cargo build --verbose &&
       cargo test --verbose &&
-      ([ $TRAVIS_RUST_VERSION == "nightly" ] && cargo build --verbose --features nostd) &&
-      ([ $TRAVIS_RUST_VERSION == "nightly" ] && cargo test --verbose --features nostd)
+      (
+          (
+              [[ $TRAVIS_RUST_VERSION == "nightly" ]] &&
+              (
+                  cargo build --verbose --features nostd &&
+                  cargo test --verbose --features nostd
+              )
+          ) ||
+          true
+      )
 after_success: |
   [ $TRAVIS_RUST_VERSION == "stable" ] &&
   [ $TRAVIS_BRANCH = master ] &&
